<resources>
    <string name="app_name">AutoPartsStore</string>
    <string name="welcome">Welcome!</string>
    <string name="authorization">Registration</string>
    <string name="email">Email</string>
    <string name="button_login">Continue</string>
    <string name="button_signup">SIGN UP</string>
    <string name="email_annotation">We will send an email with a confirmation code</string>
    <string name="button_next_hint">By clicking the button SIGN IN I agree to the terms of use of the application</string>
    <string name="required">Required</string>
    <string name="password">Password</string>
    <string name="correct">Correct</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password_mess">Invalid password. Minimum 6 characters</string>
    <string name="voiti_v_accaunt">Log in to your account</string>
    <string name="phone_number">Phone number</string>
    <string name="registration">Registration</string>
    <string name="noaccaunt_signin_text">There is no account? <font color="#1B369A">Sign up</font></string>
    <string name="welcome_back">Welcome Back</string>
    <string name="user_name">Dmitry</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="explorer">Explorer</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="favorite">Favorite</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="title">title</string>
    <string name="buy_now">Buy Now</string>
    <string name="empty_cart_text">Your Cart is empty</string>
    <string name="cart">Cart</string>
    <string name="recommendation">Recommendation</string>
    <string name="subtotal">Subtotal</string>
    <string name="fee_delivery">Fee Delivery</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
</resources>